--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "dist",
-    "short_name": "dist",
+    "name": "gistx",
+    "short_name": "gistx",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
