--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,9 +18,8 @@ dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/surveys/survey.xml
+    - assets/surveys/
     - assets/branding/gistx.png
-    # You can list more surveys here as you add them
 
 dev_dependencies:
   change_app_package_name: ^1.3.0
