--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,18 @@ flutter:
   assets:
     - assets/surveys/
     - assets/branding/gistx.png
+    - assets/database/
 
 dev_dependencies:
   change_app_package_name: ^1.3.0
+  flutter_launcher_icons: ^0.13.1
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/branding/gistx.png"
+  min_sdk_android: 21
+  windows:
+    generate: true
+    icon_size: 256
+    icon_file: "assets/branding/gistx.png"
