--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,18 +16,16 @@ dependencies:
   crypto: ^3.0.3
   flutter_secure_storage: ^9.2.2
   csv: ^6.0.0
-
-flutter:
-  uses-material-design: true
-  assets:
-    - assets/surveys/fake_household_survey/
-    - assets/surveys/fake_clinical_trial/
-    - assets/branding/gistx.png
-    - assets/database/
+  archive: ^3.6.1
 
 dev_dependencies:
   change_app_package_name: ^1.3.0
   flutter_launcher_icons: ^0.13.1
+
+flutter:
+  uses-material-design: true
+  assets:
+    - assets/branding/gistx.png
 
 flutter_launcher_icons:
   android: "launcher_icon"
