Forced all entered text to be uppercase. Wrapped error messages so all could be seen on small screens.

--- a/.gitignore
+++ b/.gitignore
@@ -132,5 +132,4 @@ linux/flutter/ephemeral/
 
 
 # Geoff
-/assets/database/fake_survey.sqlite
-/assets/database/household_survey.sqlite
+/installer_output/
