--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,6 @@
 name: GiSTX
 description: Cross-platform Questionnaire software
+version: 0.0.1
 environment:
   sdk: '>=3.2.0 <4.0.0'
 
@@ -18,6 +19,7 @@ dependencies:
   csv: ^6.0.0
   archive: ^3.6.1
   ftpconnect: ^1.0.0
+  package_info_plus: ^8.0.0
 
 dev_dependencies:
   change_app_package_name: ^1.3.0
